--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,7 +59,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:clipToPadding="false"
-        android:layout_margin="4dp"
+        android:layout_marginBottom="@dimen/_4sdp"
         android:layout_below="@id/searchLayout"
         android:layout_alignParentBottom="true"
         android:paddingBottom="@dimen/_45sdp"
@@ -77,6 +77,7 @@
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_alignParentBottom="true"
+        android:layout_marginTop="@dimen/_4sdp"
         android:layout_marginStart="@dimen/_5sdp"
         android:layout_marginLeft="@dimen/_5sdp"
         android:layout_marginEnd="@dimen/_5sdp"
@@ -108,12 +109,24 @@
             android:contentDescription="@null" />
 
         <ImageView
+            android:layout_marginEnd="@dimen/_5sdp"
+            android:layout_marginRight="@dimen/_5sdp"
+            android:layout_marginLeft="@dimen/_5sdp"
             android:id="@+id/imageAddImage"
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
             android:layout_gravity="center_vertical"
             android:src="@drawable/add_image"
             android:contentDescription="@null" />
+
+        <ImageView
+            android:id="@+id/imageChangeLayout"
+            android:layout_width="@dimen/_25sdp"
+            android:layout_height="@dimen/_25sdp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/two_columns"
+            android:contentDescription="@null"
+            app:tint="@color/colorOfAddIcons" />
 
 
     </LinearLayout>
